<resources>
    <string name="app_name">Recetas</string>
    <string name="title_recetas">Recetas</string>
    <string name="title_favoritas">Favoritas</string>
    <string name="title_perfil">Perfil</string>
    <string name="selectImage">Seleccionar Imágen</string>
    <string name="saveProfile">Guardar</string>
    <string name="userName">Nombre</string>
    <string name="newUserName">Nuevo nombre de usuario</string>
    <string name="addRecipeName">Nombre de la receta</string>
    <string name="radioButtonPrivate">Privada</string>
    <string name="radioButtonPublic">Pública</string>
    <string name="timeOfPreparation">Tiempo estimado para la preparación:</string>
    <string name="preparationHours">Horas</string>
    <string name="preparationMinutes">Minutos</string>
    <string name="addingredients">Ingredientes</string>
    <string name="categorySelection">Categoría:</string>
    <string name="ingredients">Ingredientes</string>
    <string name="preparation">Preparación</string>
    <string name="titleEditProfile">Editar perfil</string>
    <string name="login">iniciar sesión</string>
    <string name="newAccount">Crear una cuenta</string>
    <string name="mail">Email</string>
    <string name="passwd">Contraseña</string>
    <string name="createUser">Nombre de Usuario</string>
    <string name="register">registrarse</string>
    <string name="toLogin">Iniciar Sesión</string>
    <string name="lunch">Comidas</string>
    <string name="dinner">Cenas</string>
    <string name="afternoonSnack">Meriendas</string>
    <string name="dessert">Postres</string>
    <string name="allRecipes">Todas</string>
    <string name="lostConnection">Comprueba tu conexión a Internet</string>
    <string name="searchRecipe">Buscar receta</string>
    <string name="peopleNumber">Número de personas</string>
    <string name="ingredientsFor">Ingredientes para:</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="subTitleRegister">Accede fácilmente a nuestra comunidad</string>
    <string name="backToLogin">Volver atrás</string>
</resources>
