<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/et_login_email"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="150dp"
                    android:hint="@string/mail"
                    android:textColor="@color/recipeContent"
                    android:textSize="20sp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/et_login_passwd"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/passwd"
                    android:inputType="textPassword"
                    android:textColor="@color/recipeContent"
                    android:textSize="20sp"/>

            <Button
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/whiteBackground"/>

            <TextView
                    android:text="@string/newAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_login_to_register"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>