<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.RegisterActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:layout_marginTop="164dp"
            android:elevation="5dp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/recipe_icon"
                    android:id="@+id/imageView5"
                    android:layout_marginTop="64dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/et_reg_email"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:hint="@string/mail"
                    android:maxLines="1"
                    android:textColor="@color/recipeContent"
                    android:textSize="20sp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_reg_name"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:hint="@string/createUser"
                    android:maxLines="1"
                    android:textColor="@color/recipeContent"
                    android:textSize="20sp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/et_reg_passwd"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:hint="@string/passwd"
                    android:maxLines="1"
                    android:textColor="@color/recipeContent"
                    android:textSize="20sp"/>

            <Button
                    android:text="@string/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_register"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/whiteBackground"/>

            <TextView
                    android:text="@string/toLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_reg_to_login"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
