<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileActivity"
        android:background="@color/whiteBackground">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_recipe_crud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="8dp"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/btn_edit_profile_back"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_recipe_crud"
            app:layout_constraintStart_toStartOf="@+id/toolbar_recipe_crud"
            app:layout_constraintTop_toTopOf="@+id/toolbar_recipe_crud"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:elevation="9dp"/>

    <TextView
            android:text="@string/titleEditProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_recipe_crud"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn_edit_profile_back"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:elevation="9dp"
            android:textColor="@color/whiteBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center|start"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_recipe_crud"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_recipe_crud"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_edit_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/egg"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/selectImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/change_image_edit_profile"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:padding="8dp"
                        android:textColor="@color/whiteBackground"
                        android:textSize="18sp"
                        android:background="@drawable/rounded_corner"
                        android:layout_marginEnd="32dp"
                        android:layout_marginStart="32dp"/>

            </LinearLayout>

            <TextView
                    android:text="@string/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/blackLetters"
                    android:textSize="18sp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapSentences"
                    android:ems="10"
                    android:id="@+id/change_name_edit_profile"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/newUserName"
                    android:textColor="@color/recipeContent"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_marginTop="16dp">

                <TextView
                        android:text="@string/saveProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_edit_profile"
                        android:layout_marginEnd="16dp"
                        tools:layout_marginLeft="16dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        tools:layout_gravity="end"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>